Implement home ordering by categories

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Articles</h1>
+  <%#= @articles.inspect %>
 
   <table class="table table-striped table-hover">
     <thead>
