--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container">
+  <div class="display-3 text-center">
+    First Articles of Each Category
+  </div>
+
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Category</th>
+      <th>User</th>
+      <th>Content</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @recent_articles.each do |article| %>
+    <tr>
+
+      <td><%= article.title %></td>
+      <td><%= article.category %></td>
+      <td><%= article.user.email %></td>
+      <td><%= article.content %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
