--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
   </div>
-
+<% if @user.new_record? || params[:passwd] %>
   <div class="form-group">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -21,6 +21,13 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
   </div>
+
+  <div class="form-group">
+    <%= f.label :role %><br />
+    <%= f.select :role, @user.available_roles,  class: 'form-control' %>
+  </div>
+
+<% end %>
 
   <div class="actions">
     <%= f.submit "Sign up", class: 'btn btn-lg btn-primary' %>
