--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,10 +22,12 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :role %><br />
-    <%= f.select :role, @user.available_roles,  class: 'form-control' %>
-  </div>
+    <% if @user.admin? %>
+      <div class="form-group">
+        <%= f.label :role %><br />
+        <%= f.select :role, @user.available_roles,  class: 'form-control' %>
+      </div>
+    <% end %>
 
 <% end %>
 
